src/styles/projectcard.css
#projectCardContainer{
    display: flex;
    flex-direction: row;
    height: 40vh;
    width: 80%;
    /* background-color: rgb(238, 146, 99); */
    border-radius: 15px;
    /* box-shadow: 0px 1px 4px #6c6c6c; */
    transition: transform 0.16s ease-in-out, background-color ease-in-out 0.16s;
}

#projectCardContainer:hover{
    box-shadow: 0px 2px 8px #6c6c6c;
    transform: translateY(-4px);
    background-color: var(--primary-color);
}

#projectImage{
    height: 100%;
    width: 40%;
    /* background-color: aquamarine; */
}

#projectContent{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: left;
    width: 60%;
}

#projectTitleSkills{
    display: flex;
    flex-direction: column;
    gap: 15px;
}

#projectTitle{
    font-size: 1.8em;
    font-weight: 600;
    text-align: left;
    padding-left: 1em;
    /* text-decoration: none; */
    color: black;
    width: fit-content;
}

#projectSkills{
    display: flex;
    flex-wrap: wrap;
    padding-left: 1.8em;
    gap: 1em;
}

#projectObj{
    text-align: left;
    padding: 1em 1.8em;
    font-size: 1.2em;
    font-weight: 400;
}

img.projectImg{
    width: 100%;
    height: 100%;
    
    /* object-fit: contain; */
}

@media screen and (min-width: 1040px) and (max-width: 1240px){
    #projectCardContainer{
        height: 30vh;
    }
}

@media screen and (min-width: 790px) and (max-width: 1240px){
    #projectCardContainer{
        height: 30vh;
        width: 90%;
    }
}

@media screen and (min-width: 550px) and (max-width: 790px){
    #projectImage{
        height: 60%;
    }
    #projectCardContainer{
        height: 70vh;
    }
}

@media screen and (max-width: 550px) {
    #projectCardContainer{
        height: 60vh;
    }
    #projectImage{
        height: 40%;
    }
}

@media screen and (max-width: 790px){
    #projectCardContainer{
        flex-direction: column;
        width: 85%;
        gap: 18px;
    }
    #projectImage{
        width: 100%;
        /* height: 40%; */
    }
    #projectContent{
        width: 100%;
        height: 60%;
    }
    #projectSkills{
        gap: 0.6em;
    }
}

